完成菜单切换和music菜单临时实现

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">spi_st7735lcd (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
-<td align = "center">1</td>
+<td align = "center">3</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -46,20 +46,29 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--change_mode
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">68</td>
+<td align = "center">2</td>
 <td align = "center">-</td>
-<td align = "center">259</td>
+<td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--muxcontrol_inst
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td align = "center">68</td>
+<td align = "center">-</td>
+<td align = "center">244</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--centerctrl_inst
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
-<td align = "center">13</td>
+<td align = "center">12</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -68,16 +77,25 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">-</td>
-<td align = "center">33</td>
+<td align = "center">35</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--keyboard_mode_show
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">28</td>
-<td align = "center">15</td>
-<td align = "center">94</td>
+<td align = "center">32</td>
+<td align = "center">8</td>
+<td align = "center">105</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--music_mode_show
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td align = "center">41</td>
+<td align = "center">-</td>
+<td align = "center">82</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -86,7 +104,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">104</td>
+<td align = "center">139</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -104,16 +122,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">54</td>
 <td align = "center">-</td>
-<td align = "center">134</td>
+<td align = "center">151</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--music
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">24</td>
+<td align = "center">43</td>
 <td align = "center">-</td>
-<td align = "center">132</td>
+<td align = "center">178</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
