--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue May 21 13:51:02 2024
+<td>Wed May 22 02:46:37 2024
 </td>
 </tr>
 <tr>
@@ -93,23 +93,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.046s, Elapsed time = 0h 0m 0.046s
-   Placement Phase 1: CPU time = 0h 0m 0.069s, Elapsed time = 0h 0m 0.069s
-   Placement Phase 2: CPU time = 0h 0m 0.07s, Elapsed time = 0h 0m 0.069s
+   Placement Phase 0: CPU time = 0h 0m 0.067s, Elapsed time = 0h 0m 0.066s
+   Placement Phase 1: CPU time = 0h 0m 0.068s, Elapsed time = 0h 0m 0.068s
+   Placement Phase 2: CPU time = 0h 0m 0.084s, Elapsed time = 0h 0m 0.084s
    Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
    Total Placement: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.193s, Elapsed time = 0h 0m 0.193s
-   Routing Phase 2: CPU time = 0h 0m 0.559s, Elapsed time = 0h 0m 0.559s
-   Total Routing: CPU time = 0h 0m 0.752s, Elapsed time = 0h 0m 0.752s
+   Routing Phase 1: CPU time = 0h 0m 0.227s, Elapsed time = 0h 0m 0.227s
+   Routing Phase 2: CPU time = 0h 0m 0.546s, Elapsed time = 0h 0m 0.546s
+   Total Routing: CPU time = 0h 0m 0.773s, Elapsed time = 0h 0m 0.773s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 292MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 314MB</td>
 </tr>
 </table>
 <br/>
@@ -124,12 +124,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>799/8640</td>
-<td>9%</td>
+<td>974/8640</td>
+<td>11%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>799(772 LUT, 27 ALU, 0 ROM16)</td>
+<td>974(954 LUT, 20 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -139,8 +139,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>263/6693</td>
-<td>3%</td>
+<td>329/6693</td>
+<td>4%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -149,8 +149,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>250/6480</td>
-<td>3%</td>
+<td>316/6480</td>
+<td>4%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -164,8 +164,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>463/4320</td>
-<td>10%</td>
+<td>555/4320</td>
+<td>12%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -322,7 +322,7 @@ Generate output files:
 <td> -</td>
 </tr>
 <tr>
-<td class="label">n72_5</td>
+<td class="label">mode_rst</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
