添加示例乐谱，测试bug，修正部分代码

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource-LINYER.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource-LINYER.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">spi_st7735lcd (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td class="label">spi_st7735lcd (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">3</td>
@@ -38,7 +38,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--uPLL
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -47,7 +47,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--change_mode
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">2</td>
@@ -56,16 +56,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">238</td>
+<td align = "center">244</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--centerctrl_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
 <td align = "center">12</td>
@@ -74,43 +74,43 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_write_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">-</td>
-<td align = "center">32</td>
+<td align = "center">35</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--keyboard_mode_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">398</td>
-<td align = "center">48</td>
-<td align = "center">635</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td align = "center">32</td>
+<td align = "center">8</td>
+<td align = "center">105</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--music_mode_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">42</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td align = "center">41</td>
 <td align = "center">-</td>
-<td align = "center">81</td>
+<td align = "center">82</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_show_char_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">143</td>
+<td align = "center">139</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--ascii_prom
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -119,25 +119,25 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--decoder
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">54</td>
 <td align = "center">-</td>
-<td align = "center">156</td>
+<td align = "center">151</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--music
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">43</td>
 <td align = "center">-</td>
-<td align = "center">172</td>
+<td align = "center">178</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--led_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (C:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">5</td>
 <td align = "center">-</td>
 <td align = "center">5</td>
