--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.pin-LINYER.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.pin-LINYER.html
@@ -50,11 +50,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun May 26 00:10:12 2024
+<td>Fri May 24 08:01:41 2024
 </td>
 </tr>
 <tr>
