--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power-LINYER.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power-LINYER.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun May 26 00:10:12 2024
+<td>Fri May 24 08:01:41 2024
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>15.037</td>
+<td>14.770</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,7 +104,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>6.019</td>
+<td>5.752</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.325</td>
+<td>25.319</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.675</td>
+<td>84.681</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,9 +192,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.687</td>
+<td>3.465</td>
 <td>2.090</td>
-<td>6.933</td>
+<td>6.666</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -229,9 +229,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.597</td>
+<td>0.332</td>
 <td>NA</td>
-<td>12.519</td>
+<td>12.488</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -261,8 +261,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>spi_st7735lcd</td>
-<td>4.030</td>
-<td>4.030(4.029)</td>
+<td>3.765</td>
+<td>3.765(3.764)</td>
 <tr>
 <td>spi_st7735lcd/centerctrl_inst/</td>
 <td>0.005</td>
@@ -273,36 +273,36 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.001(0.000)</td>
 <tr>
 <td>spi_st7735lcd/decoder/</td>
-<td>0.048</td>
-<td>0.048(0.000)</td>
+<td>0.046</td>
+<td>0.046(0.000)</td>
 <tr>
 <td>spi_st7735lcd/keyboard_mode_show/</td>
-<td>0.315</td>
-<td>0.315(0.000)</td>
+<td>0.049</td>
+<td>0.049(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_init_inst/</td>
-<td>0.072</td>
-<td>0.072(0.000)</td>
+<td>0.074</td>
+<td>0.074(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/</td>
-<td>0.699</td>
-<td>0.699(0.635)</td>
+<td>0.698</td>
+<td>0.698(0.635)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/ascii_prom/</td>
 <td>0.635</td>
 <td>0.635(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_write_inst/</td>
-<td>0.011</td>
-<td>0.011(0.000)</td>
+<td>0.012</td>
+<td>0.012(0.000)</td>
 <tr>
 <td>spi_st7735lcd/led_show/</td>
 <td>0.002</td>
 <td>0.002(0.000)</td>
 <tr>
 <td>spi_st7735lcd/music/</td>
-<td>0.052</td>
-<td>0.052(0.000)</td>
+<td>0.053</td>
+<td>0.053(0.000)</td>
 <tr>
 <td>spi_st7735lcd/music_mode_show/</td>
 <td>0.027</td>
@@ -322,7 +322,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>100.286</td>
-<td>1.240</td>
+<td>0.973</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
