--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt-LINYER.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt-LINYER.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<title>Pin Report</title>
+<title>PnR Analysis Report</title>
 <style type="text/css">
 body { font-family: Verdana, Arial, sans-serif; font-size: 12px; }
 div#main_wrapper{ width: 100%; }
@@ -30,10 +30,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <div id="catalog_wrapper">
 <div id="catalog">
 <ul>
-<li><a href="#Message" style=" font-size: 16px;">Pin Messages</a></li>
-<!--<li><a href="#Summary" style=" font-size: 16px;">Pin Summaries</a></li>-->
-<li><a href="#Pin_Details" style=" font-size: 16px;">Pin Details</a>
+<li><a href="#Message" style=" font-size: 16px;">PnR Messages</a></li>
+<!--<li><a href="#Summary" style=" font-size: 16px;">PnR Summaries</a></li>-->
+<li><a href="#PnR_Details" style=" font-size: 16px;">PnR Details</a>
+<li><a href="#Resource" style=" font-size: 16px;">Resource</a>
 <ul>
+<li><a href="#Resource_Usage_Summary" style=" font-size: 14px;">Resource Usage Summary</a></li>
+<li><a href="#I/O_Bank_Usage_Summary" style=" font-size: 14px;">I/O Bank Usage Summary</a></li>
+<li><a href="#Global_Clock_Usage_Summary" style=" font-size: 14px;">Global Clock Usage Summary</a></li>
+<li><a href="#Global_Clock_Signals" style=" font-size: 14px;">Global Clock Signals</a></li>
 <li><a href="#Pinout_by_Port_Name" style=" font-size: 14px;">Pinout by Port Name</a></li>
 <li><a href="#All_Package_Pins" style=" font-size: 14px;">All Package Pins</a></li>
 </ul>
@@ -42,19 +47,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </div><!-- catalog -->
 </div><!-- catalog_wrapper -->
 <div id="content">
-<h1><a name="Message">Pin Messages</a></h1>
+<h1><a name="Message">PnR Messages</a></h1>
 <table class="summary_table">
 <tr>
 <td class="label">Report Title</td>
-<td>Pin Report</td>
+<td>PnR Report</td>
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
+<td>C:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\SPIlcd_prj.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -74,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun May 26 00:10:12 2024
+<td>Fri May 24 08:01:41 2024
 </td>
 </tr>
 <tr>
@@ -82,7 +87,252 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>Copyright (C)2014-2022 Gowin Semiconductor Corporation. All rights reserved.</td>
 </tr>
 </table>
-<h1><a name="Pin_Details">Pin Details</a></h1>
+<h1><a name="PnR_Details">PnR Details</a></h1>
+<!--<h1><a name="Summary">PnR Summaries</a></h1>-->
+<table class="summary_table">
+<tr>
+<td class="label">Place & Route Process</td>
+<td>Running placement:
+   Placement Phase 0: CPU time = 0h 0m 0.099s, Elapsed time = 0h 0m 0.099s
+   Placement Phase 1: CPU time = 0h 0m 0.089s, Elapsed time = 0h 0m 0.09s
+   Placement Phase 2: CPU time = 0h 0m 0.133s, Elapsed time = 0h 0m 0.132s
+   Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Total Placement: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
+Running routing:
+   Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s
+   Routing Phase 1: CPU time = 0h 0m 0.3s, Elapsed time = 0h 0m 0.299s
+   Routing Phase 2: CPU time = 0h 0m 0.702s, Elapsed time = 0h 0m 0.702s
+   Total Routing: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
+Generate output files:
+   CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
+</td>
+</tr>
+<tr>
+<td class="label">Total Time and Memory Usage</td>
+<td>CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s, Peak memory usage = 193MB</td>
+</tr>
+</table>
+<br/>
+<h1><a name="Resource">Resource</a></h1>
+<!--<h1><a name="Summary">PnR Summaries</a></h1>-->
+<h2><a name="Resource_Usage_Summary">Resource Usage Summary:</a></h2>
+<table class="summary_table">
+<tr>
+<td class="label"><b>Resource</b></td>
+<td><b>Usage</b></td>
+<td><b>Utilization</b></td>
+</tr>
+<tr>
+<td class="label">Logic</td>
+<td>974/8640</td>
+<td>11%</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
+<td>974(954 LUT, 20 ALU, 0 ROM16)</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --SSRAM(RAM16)</td>
+<td>0</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label">Register</td>
+<td>329/6693</td>
+<td>4%</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --Logic Register as Latch</td>
+<td>0/6480</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --Logic Register as FF</td>
+<td>316/6480</td>
+<td>4%</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --I/O Register as Latch</td>
+<td>0/213</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">&nbsp &nbsp --I/O Register as FF</td>
+<td>13/213</td>
+<td>6%</td>
+</tr>
+<tr>
+<td class="label">CLS</td>
+<td>555/4320</td>
+<td>12%</td>
+</tr>
+<tr>
+<td class="label">I/O Port</td>
+<td>23</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label">I/O Buf</td>
+<td>23</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label"> &nbsp &nbsp --Input Buf</td>
+<td>6</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label"> &nbsp &nbsp --Output Buf</td>
+<td>17</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label"> &nbsp &nbsp --Inout Buf</td>
+<td>0</td>
+<td>-</td>
+</tr>
+<tr>
+<td class="label">IOLOGIC</td>
+<td>0</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">BSRAM</td>
+<td>2 pROM<br/></td>
+<td>7%</td>
+</tr>
+<tr>
+<td class="label">DSP</td>
+<td>0</td><td>0%</td>
+</tr>
+<tr>
+<td class="label">PLL</td>
+<td>1/2</td>
+<td>50%</td>
+</tr>
+<tr>
+<td class="label">DCS</td>
+<td>0/8</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">DQCE</td>
+<td>0/24</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">OSC</td>
+<td>0/1</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">User Flash</td>
+<td>0/1</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">CLKDIV</td>
+<td>0/8</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">DLLDLY</td>
+<td>0/8</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">DHCEN</td>
+<td>0/8</td>
+<td>0%</td>
+</tr>
+<tr>
+<td class="label">DHCENC</td>
+<td>0/4</td>
+<td>0%</td>
+</tr>
+</table>
+<h2><a name="I/O_Bank_Usage_Summary">I/O Bank Usage Summary:</a></h2>
+<table class="summary_table">
+<tr>
+<td class="label"><b>I/O Bank</b></td>
+<td><b>Usage</b></td>
+</tr>
+<tr>
+<td class="label">bank 1</td>
+<td>7/25(28%)</td>
+</tr>
+<tr>
+<td class="label">bank 2</td>
+<td>1/23(4%)</td>
+</tr>
+<tr>
+<td class="label">bank 3</td>
+<td>15/49(30%)</td>
+</tr>
+</table>
+<br/>
+<h2><a name="Global_Clock_Usage_Summary">Global Clock Usage Summary:</a></h2>
+<table class="summary_table">
+<tr>
+<td class="label"><b>Global Clock</b></td>
+<td><b>Usage</b></td>
+</tr>
+<tr>
+<td class="label">PRIMARY</td>
+<td>1/8(12%)</td>
+</tr>
+<tr>
+<td class="label">SECONDARY</td>
+<td>2/8(25%)</td>
+</tr>
+<tr>
+<td class="label">GCLK_PIN</td>
+<td>2/4(50%)</td>
+</tr>
+<tr>
+<td class="label">PLL</td>
+<td>1/2(50%)</td>
+</tr>
+<tr>
+<td class="label">CLKDIV</td>
+<td>0/8(0%)</td>
+</tr>
+<tr>
+<td class="label">DLLDLY</td>
+<td>0/8(0%)</td>
+</tr>
+</table>
+<br/>
+<h2><a name="Global_Clock_Signals">Global Clock Signals:</a></h2>
+<table class="summary_table">
+<tr>
+<td class="label"><b>Signal</b></td>
+<td><b>Global Clock</b></td>
+<td><b>Location</b></td>
+</tr>
+<tr>
+<td class="label">sys_clk</td>
+<td>PRIMARY</td>
+<td> TL BR BL</td>
+</tr>
+<tr>
+<td class="label">sys_rst_n_d</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
+<td class="label">mode_rst</td>
+<td>SECONDARY</td>
+<td> -</td>
+</tr>
+<tr>
+<td class="label">xtal_clk_d</td>
+<td>HCLK</td>
+<td>RIGHT[0]</td>
+</tr>
+</table>
+<br/>
 <h2><a name="Pinout_by_Port_Name">Pinout by Port Name:</a></h2>
 <table class="summary_table">
 <tr>
