修复键盘读入延迟导致的bug，换成了时钟信号1ms

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">spi_st7735lcd (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td class="label">keyboard_music_top (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">3</td>
@@ -38,7 +38,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--uPLL
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -47,7 +47,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--change_mode
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">2</td>
 <td align = "center">-</td>
 <td align = "center">2</td>
@@ -56,16 +56,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">254</td>
+<td align = "center">237</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--centerctrl_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
 <td align = "center">12</td>
@@ -74,7 +74,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_write_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">21</td>
 <td align = "center">-</td>
 <td align = "center">32</td>
@@ -82,29 +82,20 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--keyboard_mode_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">398</td>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--menu_show
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">404</td>
 <td align = "center">43</td>
-<td align = "center">623</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-<td align = "center">-</td>
-</tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--music_mode_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">42</td>
-<td align = "center">-</td>
-<td align = "center">82</td>
+<td align = "center">715</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_show_char_inst
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">139</td>
+<td align = "center">114</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -118,26 +109,26 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">2</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--decoder
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">54</td>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--pmod_decoder
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">31</td>
 <td align = "center">-</td>
-<td align = "center">155</td>
+<td align = "center">87</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--music
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">41</td>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--speaker_music
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">43</td>
 <td align = "center">-</td>
-<td align = "center">174</td>
+<td align = "center">156</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--led_show
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">5</td>
 <td align = "center">-</td>
 <td align = "center">5</td>
