--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun May 26 20:31:42 2024
+<td>Mon May 27 23:12:13 2024
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>15.029</td>
+<td>14.990</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,7 +104,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>6.011</td>
+<td>5.972</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.325</td>
+<td>25.324</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.675</td>
+<td>84.676</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,9 +192,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.681</td>
+<td>3.648</td>
 <td>2.090</td>
-<td>6.925</td>
+<td>6.886</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -229,9 +229,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.589</td>
+<td>0.550</td>
 <td>NA</td>
-<td>12.508</td>
+<td>12.512</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -260,55 +260,51 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Block Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>spi_st7735lcd</td>
-<td>4.022</td>
-<td>4.022(4.021)</td>
+<td>keyboard_music_top</td>
+<td>3.983</td>
+<td>3.983(3.982)</td>
 <tr>
-<td>spi_st7735lcd/centerctrl_inst/</td>
+<td>keyboard_music_top/centerctrl_inst/</td>
 <td>0.005</td>
 <td>0.005(0.000)</td>
 <tr>
-<td>spi_st7735lcd/change_mode/</td>
+<td>keyboard_music_top/change_mode/</td>
 <td>0.001</td>
 <td>0.001(0.000)</td>
 <tr>
-<td>spi_st7735lcd/decoder/</td>
-<td>0.047</td>
-<td>0.047(0.000)</td>
+<td>keyboard_music_top/lcd_init_inst/</td>
+<td>0.072</td>
+<td>0.072(0.000)</td>
 <tr>
-<td>spi_st7735lcd/keyboard_mode_show/</td>
-<td>0.304</td>
-<td>0.304(0.000)</td>
+<td>keyboard_music_top/lcd_show_char_inst/</td>
+<td>0.691</td>
+<td>0.691(0.635)</td>
 <tr>
-<td>spi_st7735lcd/lcd_init_inst/</td>
-<td>0.077</td>
-<td>0.077(0.000)</td>
-<tr>
-<td>spi_st7735lcd/lcd_show_char_inst/</td>
-<td>0.698</td>
-<td>0.698(0.635)</td>
-<tr>
-<td>spi_st7735lcd/lcd_show_char_inst/ascii_prom/</td>
+<td>keyboard_music_top/lcd_show_char_inst/ascii_prom/</td>
 <td>0.635</td>
 <td>0.635(0.000)</td>
 <tr>
-<td>spi_st7735lcd/lcd_write_inst/</td>
+<td>keyboard_music_top/lcd_write_inst/</td>
 <td>0.011</td>
 <td>0.011(0.000)</td>
 <tr>
-<td>spi_st7735lcd/led_show/</td>
+<td>keyboard_music_top/led_show/</td>
 <td>0.002</td>
 <td>0.002(0.000)</td>
 <tr>
-<td>spi_st7735lcd/music/</td>
-<td>0.052</td>
-<td>0.052(0.000)</td>
+<td>keyboard_music_top/menu_show/</td>
+<td>0.330</td>
+<td>0.330(0.000)</td>
 <tr>
-<td>spi_st7735lcd/music_mode_show/</td>
-<td>0.028</td>
-<td>0.028(0.000)</td>
+<td>keyboard_music_top/pmod_decoder/</td>
+<td>0.026</td>
+<td>0.026(0.000)</td>
 <tr>
-<td>spi_st7735lcd/uPLL/</td>
+<td>keyboard_music_top/speaker_music/</td>
+<td>0.047</td>
+<td>0.047(0.000)</td>
+<tr>
+<td>keyboard_music_top/uPLL/</td>
 <td>2.797</td>
 <td>2.797(0.000)</td>
 </table>
@@ -322,7 +318,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>100.286</td>
-<td>1.232</td>
+<td>1.193</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
