--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun May 26 20:31:42 2024
+<td>Mon May 27 23:12:13 2024
 </td>
 </tr>
 <tr>
@@ -93,15 +93,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.111s, Elapsed time = 0h 0m 0.111s
-   Placement Phase 1: CPU time = 0h 0m 0.074s, Elapsed time = 0h 0m 0.074s
-   Placement Phase 2: CPU time = 0h 0m 0.177s, Elapsed time = 0h 0m 0.177s
+   Placement Phase 0: CPU time = 0h 0m 0.104s, Elapsed time = 0h 0m 0.104s
+   Placement Phase 1: CPU time = 0h 0m 0.071s, Elapsed time = 0h 0m 0.071s
+   Placement Phase 2: CPU time = 0h 0m 0.135s, Elapsed time = 0h 0m 0.134s
    Placement Phase 3: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
-   Total Placement: CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s
+   Total Placement: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.32s, Elapsed time = 0h 0m 0.321s
-   Routing Phase 2: CPU time = 0h 0m 0.782s, Elapsed time = 0h 0m 0.781s
+   Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
+   Routing Phase 1: CPU time = 0h 0m 0.302s, Elapsed time = 0h 0m 0.301s
+   Routing Phase 2: CPU time = 0h 0m 0.928s, Elapsed time = 0h 0m 0.928s
    Total Routing: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
@@ -109,7 +109,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 7s, Elapsed time = 0h 0m 7s, Peak memory usage = 339MB</td>
+<td>CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s, Peak memory usage = 281MB</td>
 </tr>
 </table>
 <br/>
@@ -124,12 +124,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>1539/8640</td>
-<td>17%</td>
+<td>1419/8640</td>
+<td>16%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>1539(1478 LUT, 61 ALU, 0 ROM16)</td>
+<td>1419(1359 LUT, 60 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -139,8 +139,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>694/6693</td>
-<td>10%</td>
+<td>637/6693</td>
+<td>9%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -149,8 +149,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>681/6480</td>
-<td>10%</td>
+<td>624/6480</td>
+<td>9%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -164,8 +164,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>882/4320</td>
-<td>20%</td>
+<td>807/4320</td>
+<td>18%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -332,7 +332,7 @@ Generate output files:
 <td> -</td>
 </tr>
 <tr>
-<td class="label">process_score_349_6</td>
+<td class="label">process_len_6_5</td>
 <td>SECONDARY</td>
 <td> -</td>
 </tr>
