完善电子琴模式，从ROM内读取对应NOTE，存储128NOTE值

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -59,7 +59,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">237</td>
+<td align = "center">241</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -84,9 +84,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--menu_show
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
-<td align = "center">404</td>
+<td align = "center">405</td>
 <td align = "center">43</td>
-<td align = "center">715</td>
+<td align = "center">724</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -95,7 +95,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">114</td>
+<td align = "center">113</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -113,18 +113,27 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">31</td>
 <td align = "center">-</td>
-<td align = "center">87</td>
+<td align = "center">89</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--speaker_music
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
-<td align = "center">43</td>
+<td align = "center">59</td>
 <td align = "center">-</td>
-<td align = "center">156</td>
+<td align = "center">159</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--notes128_prom
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/speaker_music.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--led_show
