--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 27 23:12:13 2024
+<td>Wed May 29 01:03:09 2024
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>14.990</td>
+<td>15.372</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,7 +104,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>5.972</td>
+<td>6.354</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.324</td>
+<td>25.332</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.676</td>
+<td>84.668</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,9 +192,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.648</td>
+<td>3.966</td>
 <td>2.090</td>
-<td>6.886</td>
+<td>7.268</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -229,9 +229,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.550</td>
+<td>0.556</td>
 <td>NA</td>
-<td>12.512</td>
+<td>12.494</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -241,7 +241,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>0.635
+<td>1.011
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -261,8 +261,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>keyboard_music_top</td>
-<td>3.983</td>
-<td>3.983(3.982)</td>
+<td>4.364</td>
+<td>4.364(4.364)</td>
 <tr>
 <td>keyboard_music_top/centerctrl_inst/</td>
 <td>0.005</td>
@@ -273,12 +273,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.001(0.000)</td>
 <tr>
 <td>keyboard_music_top/lcd_init_inst/</td>
-<td>0.072</td>
-<td>0.072(0.000)</td>
+<td>0.073</td>
+<td>0.073(0.000)</td>
 <tr>
 <td>keyboard_music_top/lcd_show_char_inst/</td>
-<td>0.691</td>
-<td>0.691(0.635)</td>
+<td>0.690</td>
+<td>0.690(0.635)</td>
 <tr>
 <td>keyboard_music_top/lcd_show_char_inst/ascii_prom/</td>
 <td>0.635</td>
@@ -293,16 +293,20 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.002(0.000)</td>
 <tr>
 <td>keyboard_music_top/menu_show/</td>
-<td>0.330</td>
-<td>0.330(0.000)</td>
+<td>0.332</td>
+<td>0.332(0.000)</td>
 <tr>
 <td>keyboard_music_top/pmod_decoder/</td>
 <td>0.026</td>
 <td>0.026(0.000)</td>
 <tr>
 <td>keyboard_music_top/speaker_music/</td>
-<td>0.047</td>
-<td>0.047(0.000)</td>
+<td>0.426</td>
+<td>0.426(0.375)</td>
+<tr>
+<td>keyboard_music_top/speaker_music/notes128_prom/</td>
+<td>0.375</td>
+<td>0.375(0.000)</td>
 <tr>
 <td>keyboard_music_top/uPLL/</td>
 <td>2.797</td>
@@ -318,7 +322,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>100.286</td>
-<td>1.193</td>
+<td>1.574</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
