--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -50,7 +50,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">2</td>
 <td align = "center">-</td>
-<td align = "center">2</td>
+<td align = "center">3</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -59,7 +59,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">241</td>
+<td align = "center">240</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -85,8 +85,8 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--menu_show
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">405</td>
-<td align = "center">43</td>
-<td align = "center">724</td>
+<td align = "center">41</td>
+<td align = "center">937</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -95,7 +95,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
-<td align = "center">113</td>
+<td align = "center">124</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -113,22 +113,22 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">31</td>
 <td align = "center">-</td>
-<td align = "center">89</td>
+<td align = "center">85</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--speaker_music
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--music_init
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
-<td align = "center">59</td>
+<td align = "center">142</td>
 <td align = "center">-</td>
-<td align = "center">159</td>
+<td align = "center">323</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--notes128_prom
- (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/speaker_music.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/music_init.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -136,11 +136,65 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--music_prom
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/music_init.v)</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+<td align = "center">10</td>
+<td align = "center">-</td>
+<td align = "center">6</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--music_sp
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/music_init.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">4</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--speaker_play
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">30</td>
+<td align = "center">-</td>
+<td align = "center">91</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--start_time_show
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">51</td>
+<td align = "center">20</td>
+<td align = "center">49</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--end_time_show
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">51</td>
+<td align = "center">20</td>
+<td align = "center">50</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--process_show
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
+<td align = "center">32</td>
+<td align = "center">34</td>
+<td align = "center">21</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--led_show
  (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/keyboard_music_top.v)</td>
 <td align = "center">5</td>
 <td align = "center">-</td>
-<td align = "center">5</td>
+<td align = "center">4</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
